# asset-editor-fabrolabs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deployment.md  docker-compose.deploy.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: pyproject.toml  requirements.txt
backend/app/: asset_admin.py  asset_urls.py  backgrounds.py  cache.py  config.py  connection.py  end_intros.py  image_transforms.py  intro_music.py  intros.py  live_bgs_v2.py  live_bgs_v3.py  main.py  posters.py  schemas.py  sprites_v2.py  sprites_v3.py  stage.py  videos.py
backend/app/catalog/: base_snapshot.py  catalog.py  overrides.py  static_asset_catalog.py
backend/app/livebg/: __init__.py  ambient_lottie.py  bundle.py  ffmpeg.py  keying.py  lottie.py  render.py  service.py  verify_bundle.py
backend/app/livebg/tests/: test_rerender_no_llm.py  test_service_roundtrip.py  test_verify_bundle.py
backend/app/routes/: assets.py  storage.py
backend/app/seeds/: asset_overrides.json  backgrounds_manifest.json
backend/app/storage/: json_store.py  minio.py
backend/scripts/: materialize_configs.py  reconcile_action_folders.py
docs/superpowers/plans/: 2026-07-16-fantasy-relation-livebg-assets.md  2026-07-16-fantasy-world-graph-runtime.md
docs/superpowers/specs/: 2026-07-16-fantasy-relation-background-pilot-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: AddAssetModal.tsx  ConfigViewer.tsx  FrameEditorModal.tsx  (+9 more)
scripts/: deploy.sh
(+2 files in other folders)
