[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asset-editor"
version = "0.1.0"
description = "Standalone asset editor for the fairytale asset library"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "boto3>=1.35",
  "python-multipart>=0.0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["app/catalog/static_asset_catalog.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
